cmake: Now read SC_QEMU_DIR variable to know sc-qemu directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Rabbits_Qemu_Components)
 find_package(Rabbits REQUIRED)
 
 include_directories(
-	"../sc-qemu/rabbits"
+	"${SC_QEMU_DIR}/rabbits"
 	"${PROJECT_SOURCE_DIR}"
 )
 
