Add insn-limit and mips-shift options to cpus

--- a/components/qemu_cpu_arm.yml
+++ b/components/qemu_cpu_arm.yml
@@ -17,3 +17,15 @@ component:
       description: |
         Start a GDB server on the specified port.
         Specifying this option on one CPU affects all QEMU cpus.
+    insn-limit:
+      type: integer
+      default: 0
+      description: |
+        Limit the number of simulated instruction each time the CPU simulation loop is called.
+        0 means no limit. This option affects all QEMU cpus.
+    mips-shift:
+      type: integer
+      default: 0
+      description: |
+        QEMU icount shift option. This option affects all QEMU cpus.
+
