cmake: add sc-qemu package detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 2.6)
 project(Rabbits_Qemu_Components)
 
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 find_package(Rabbits REQUIRED)
+find_package(sc-qemu REQUIRED)
 
 include_directories(
-	"${SC_QEMU_DIR}"
+	"${SC_QEMU_INCLUDE_DIR}"
 	"${PROJECT_SOURCE_DIR}"
 )
 
