--- a/components/dev/uart_16550/uart_16550.yml
+++ b/components/dev/uart_16550/uart_16550.yml
@@ -2,8 +2,7 @@ component:
   name: qemu-uart-16550
   type: uart-16550
   class: QemuUart16550
-  include:
-    - components/dev/uart_16550/uart_16550.h
+  include: uart_16550.h
   description: UART 16550 compatible provided by QEMU.
   parameters:
     baudbase:
