--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(cpu)
 add_subdirectory(dev)
 
-rabbits_add_components(qemu_cpu_arm.yml)
+rabbits_add_components(console_backend.yml)
