--- a/components/cpu/arm/arm.inc.yml
+++ b/components/cpu/arm/arm.inc.yml
@@ -1,15 +1,7 @@
 component:
-  name: qemu-cpu-arm
-  type: cpu-arm
-  class: QemuCpuArm
-  discover: QemuInstance::get().discover(name, cp)
-  include: cpu/arm.h
-  description: ARM CPU simulation provided by QEMU.
+  name: generic-arm-cpu
+  discover: true
   parameters:
-    model:
-      type: string
-      default: "cortex-a15"
-      description: CPU model.
     gdb-server:
       type: string
       default: ""
@@ -27,4 +19,3 @@ component:
       default: 0
       description: |
         QEMU icount shift option. This option affects all QEMU cpus.
-
