Modify component's name of nucleo_timer using Qemu

--- a/components/dev/nucleo/nucleo_timer/nucleo_timer.yml
+++ b/components/dev/nucleo/nucleo_timer/nucleo_timer.yml
@@ -1,6 +1,6 @@
 component:
   implementation: qemu-nucleo-timer
-  type: nucleo-timer
+  type: qemu-nucleo-timer
   class: QemuNucleoTimer
   include: nucleo_timer.h
   decription: Nucleo timer using stm32f2xx qemu simulation 
