--- a/components/dev/nucleo/nucleo_syscfg/nucleo_syscfg.yml
+++ b/components/dev/nucleo/nucleo_syscfg/nucleo_syscfg.yml
@@ -1,6 +1,6 @@
 component:
   implementation: qemu-nucleo-syscfg
-  type: nucleo-syscfg
+  type: qemu-nucleo-syscfg
   class: QemuNucleoSyscfg
   include: nucleo_syscfg.h
   decription: Nucleo syscfg using stm32f2xx qemu simulation 
